--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -44,9 +44,10 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="literary">
-					<h2 id="literary">Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice</h2>
+			<main id="main" aria-labelledby="zoomcast">
+				<h2 id="zoomcast">Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice</h2>
 
+				<section id="zoom-specs">
 					<div class="wrapper" aria-labelledby="hayward-reeder-brice">
 						<div id="hayward-reeder-brice" class="youtube" tabindex="0" data-embed="of4W0Gsq2Hg" data-title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" data-id="hayward-reeder-brice" data-alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice">
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
@@ -59,21 +60,33 @@
 					<p id="text"><strong>Speakers:</strong> Jennifer Hayward (guest), Jessie Reeder (guest), and Michelle Prain Brice (guest), Ryan Fong (host)</p>
 					<p><strong>Date:</strong> February 25, 2021</p>
 					<p><strong>Length:</strong> 35:39</p>
-					<p><strong>Cite (MLA):</strong> “Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html">https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html</a>.</p>
+				</section>
 
-					<hr/>
+				<hr/>
 
-					<p><strong>Zoomcast Overview:</strong> Ryan Fong speaks with Jennifer Hayward, Jessie Reeder and Michelle Prain Brice, the three creators of <a href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Hayward, Reeder, and Brice also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
+				<summary aria-labelledby="overview">
+					<h3 id="overview">Overview</h3>
+					<p>Ryan Fong speaks with Jennifer Hayward, Jessie Reeder and Michelle Prain Brice, the three creators of <a href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Hayward, Reeder, and Brice also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
+				</summary>
 
-					<p><strong>Beyond the Literary Series:</strong> This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
+				<section aria-labelledby="series">
+					<h3 id="series">Beyond the Literary Series</h3>
+					<p>This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
+				</section>
 
-					<hr/>
-
-					<p><strong>Guest Biographies:</strong> Jennifer Hayward, Professor of English and Global Media and Digital Studies at the College of Wooster, received her Ph.D. from Princeton University. Her books include <em>Consuming Pleasures: Active Audiences and Serial Fictions </em>as well as new editions of Maria Graham’s <em>Journal of a Residence in Chile</em> and <em>Journal of a Voyage to Brazil</em>; recent research focuses on nineteenth-century British travellers in the Americas, with emphasis on the transoceanic networks connecting Britain with Latin America. A Fulbright in Chile in 2016-17 was instrumental in launching her current collaboration with Jessie Reeder and Michelle Prain Brice, which has developed into a transoceanic exchange of the best kind.</p>
+				<section aria-labelledby="biography">
+					<h3 id="biography">Guest Biographies</h3>
+					<p>Jennifer Hayward, Professor of English and Global Media and Digital Studies at the College of Wooster, received her Ph.D. from Princeton University. Her books include <em>Consuming Pleasures: Active Audiences and Serial Fictions </em>as well as new editions of Maria Graham’s <em>Journal of a Residence in Chile</em> and <em>Journal of a Voyage to Brazil</em>; recent research focuses on nineteenth-century British travellers in the Americas, with emphasis on the transoceanic networks connecting Britain with Latin America. A Fulbright in Chile in 2016-17 was instrumental in launching her current collaboration with Jessie Reeder and Michelle Prain Brice, which has developed into a transoceanic exchange of the best kind.</p>
           
           <p>Jessie Reeder is Assistant Professor of English at Binghamton University, specializing in nineteenth-century British literature, imperialism, Latin America, and form. Her first book is <em>The Forms of Informal Empire: Britain, Latin America, and Nineteenth-Century Literature</em> (Johns Hopkins, 2020) and her work can also be found in <em>Victorian Literature and Culture</em>,<em> Studies in English Literature</em>, <em>Studies in Romanticism</em>, and <em>Nineteenth-Century Gender Studies</em>.</p>
 					          
           <p>Michelle Prain Brice is a Professor of Literature at Universidad Adolfo Ibáñez, Chile. She earned her Ph.D. in Literature and Cultural Studies at Pontificia Universidad Católica de Valparaíso, Chile with the support of a CONICYT grant. She obtained her M.A. in Comparative Literature at the Universidad de Chile and a professional degree in Journalism at Universidad Adolfo Ibáñez. As a journalist, she has worked for <em>El Mercurio</em> newspapers in the literary and cultural sections, where she has published several interviews and articles. Among her academic publications is the book <em>Legado Británico en Valparaíso/British Legacy in Valparaíso</em> (Ril editores, Santiago, 2011), academic articles, and book chapters on the British presence in Chile. She was a Researcher Residence at the British Library in December 2019. With Jennifer Hayward and Jessie Reeder, she was awarded Eileen Curran Field Development Grant by the the Research Society for Victorian Periodicals, for digitizing British-Chilean nineteenth century periodicals and creating a digital public archive.</p>
+				</section>
+
+				<section aria-labelledby="citation">
+					<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
+					<p>“Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html">https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html</a>.</p>
+				</section>
 			</main>
 			
 			<div data-include="footer"></div>
