--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -44,32 +44,45 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="literary">
-					<h2 id="literary">Zoomcast with Jason Rudy</h2>
+			<main id="main" aria-labelledby="zoomcast">
+					<h2 id="zoomcast">Zoomcast with Jason Rudy</h2>
 
-					<div class="wrapper" aria-labelledby="rudy">
-						<div id="rudy" class="youtube" tabindex="0" data-embed="YCd--HXr4nc" data-title="Jason Rudy" data-id="rudy" data-alt="Head and shoulders image of Jason Rudy">
-							<nav class="skipcontrols" aria-labelledby="skip-controls">
-								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
-							</nav>
-							<div class="play-button"></div>
+					<section id="zoom-specs">
+						<div class="wrapper" aria-labelledby="rudy">
+							<div id="rudy" class="youtube" tabindex="0" data-embed="YCd--HXr4nc" data-title="Jason Rudy" data-id="rudy" data-alt="Head and shoulders image of Jason Rudy">
+								<nav class="skipcontrols" aria-labelledby="skip-controls">
+									<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
+								</nav>
+								<div class="play-button"></div>
+							</div>
 						</div>
-					</div>
 
-					<p id="text"><strong>Speakers:</strong> Jason Rudy (guest), Ryan Fong (host)</p>
-					<p><strong>Date:</strong> February 4, 2021</p>
-					<p><strong>Length:</strong> 40:50</p>	
-					<p><strong>Cite (MLA):</strong> “Zoomcast with Jason Rudy.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
+						<p id="text"><strong>Speakers:</strong> Jason Rudy (guest), Ryan Fong (host)</p>
+						<p><strong>Date:</strong> February 4, 2021</p>
+						<p><strong>Length:</strong> 40:50</p>	
+					</section>
 
 					<hr/>
 
-					<p><strong>Zoomcast Overview:</strong> Ryan Fong interviews Jason Rudy, Professor of English at the University of Maryland, College Park. In their conversation, they discuss how each of them came to study nineteenth-century Australia and to do so through an Indigenous-centered lens. They focus on the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia, both within the nineteenth century and in contemporary contexts.  By showing how visual works function as both archival records and interventions into colonial accounts of history, Rudy and Fong talk about they have incorporated these materials into their teaching.  Rudy also discusses the impact that his relationship with Indigenous artist Gordon Syron has had on his thinking, research, and teaching, especially as Rudy has worked with Syron on writing the artist’s biography.</p>
+					<summary aria-labelledby="overview">
+						<h3 id="overview">Overview</h3>
+						<p>Ryan Fong interviews Jason Rudy, Professor of English at the University of Maryland, College Park. In their conversation, they discuss how each of them came to study nineteenth-century Australia and to do so through an Indigenous-centered lens. They focus on the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia, both within the nineteenth century and in contemporary contexts.  By showing how visual works function as both archival records and interventions into colonial accounts of history, Rudy and Fong talk about they have incorporated these materials into their teaching.  Rudy also discusses the impact that his relationship with Indigenous artist Gordon Syron has had on his thinking, research, and teaching, especially as Rudy has worked with Syron on writing the artist’s biography.</p>
+					</summary>
 					
-					<p><strong>Beyond the Literary Series:</strong> This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
+					<section aria-labelledby="series">
+						<h3 id="series">Beyond the Literary Series</h3>
+						<p>This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
+					</section>
 
-					<hr/>
+					<section aria-labelledby="biography">
+						<h3 id="biography">Guest Biography</h3>
+						<p>Jason Rudy is a Professor of English at the University of Maryland (UMD), College Park, past president of the Northeast Victorian Studies Association, and a member of the <a href="https://historicalpoetics.com/">Historical Poetics Working Group</a>. He currently directs the <a href="http://www.english.umd.edu/academics/undergraduate/honors">English Honors program</a> at UMD. Professor Rudy serves on the advisory boards of the journals <em>Victorian Studies</em> and <em>Victorian Poetry</em> and is a General Editor for the <em>Broadview Anthology of British Literature</em>. His research focuses on nineteenth-century literature in English, especially poetry; his work is committed to thinking globally about the circulation of literature, particularly in Australia, New Zealand, Canada, and South Africa.  He is the author of <em>Imagined Homelands: British Poetry in the Colonies </em>(Johns Hopkins Press, 2017) and <em>Electric Meters: Victorian Physiological Poetics</em> (Ohio University Press, 2009).</p>
+					</section>
 
-					<p><strong>Guest Biography:</strong> Jason Rudy is a Professor of English at the University of Maryland (UMD), College Park, past president of the Northeast Victorian Studies Association, and a member of the <a href="https://historicalpoetics.com/">Historical Poetics Working Group</a>. He currently directs the <a href="http://www.english.umd.edu/academics/undergraduate/honors">English Honors program</a> at UMD. Professor Rudy serves on the advisory boards of the journals <em>Victorian Studies</em> and <em>Victorian Poetry</em> and is a General Editor for the <em>Broadview Anthology of British Literature</em>. His research focuses on nineteenth-century literature in English, especially poetry; his work is committed to thinking globally about the circulation of literature, particularly in Australia, New Zealand, Canada, and South Africa.  He is the author of <em>Imagined Homelands: British Poetry in the Colonies </em>(Johns Hopkins Press, 2017) and <em>Electric Meters: Victorian Physiological Poetics</em> (Ohio University Press, 2009).</p>
+					<section aria-labelledby="citation">
+						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
+						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
+					</section>
 			</main>
 			
 			<div data-include="footer"></div>
