--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Introduces and organizes in clusters a series of lesson plans focused on teaching Victorian Studies through a positive, race-conscious lens." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#3C587C"/>
+		<meta name="theme-color" content="#395376"/>
 		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="pragma" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
