--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -54,28 +54,28 @@
 
 				<section aria-labelledby="africa">
 					<h2 id="africa">Africa, Diaspora, and the British Empire</h2>
-					<div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div>
-					<ol>
-						<!-- <li><a href="">Introduction</a></li> -->
+					<!-- <div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
+					<ul>
+						<li><a href="">Introduction</a></li>
 						<li><a href="">Historical Literature in the Aftermath of Slavery</a></li>
 						<li><a href="">Colonial Landscapes and Travel Narratives</a></li>
 						<li><a href="">Ethiopianism</a></li>
 						<li><a href="">Slavery and Theories of Sexuality, Desire, and Family</a></li>
 						<li><a href="">Southern Africa, 1825-1930</a></li>
 						<li><a href="">Undisciplining the Dramatic Monologue</a></li>
-					</ol>
+					</ul>
 				</section>
 
 				<section aria-labelledby="africa">
 					<h2 id="seacole">Mary Seacole and the Caribbean</h2>
-					<div><a href="/html/lesson_plans/seacole.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div>
-					<ol>
-						<!-- <li><a href="">Introduction</a></li> -->
+					<!-- <div><a href="/html/lesson_plans/seacole.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
+					<ul>
+						<li><a href="">Introduction</a></li>
 						<li><a href="">Decentering Britishness</a></li>
 						<li><a href="">Autobiographical Writing</a></li>
 						<li><a href="">Recentering Nursing in Wartime</a></li>
 						<li><a href="">Decolonizing Health(care)</a></li>
-					</ol>
+					</ul>
 				</section>
 
 			</main>
