--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -57,12 +57,12 @@
 					<!-- <div><a href="/html/lesson_plans/africa.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
 					<ul>
 						<li><a href="">Introduction</a></li>
-						<li><a href="">Historical Literature in the Aftermath of Slavery</a></li>
-						<li><a href="">Colonial Landscapes and Travel Narratives</a></li>
-						<li><a href="">Ethiopianism</a></li>
-						<li><a href="">Slavery and Theories of Sexuality, Desire, and Family</a></li>
-						<li><a href="">Southern Africa, 1825-1930</a></li>
-						<li><a href="">Undisciplining the Dramatic Monologue</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Historical Literature in the Aftermath of Slavery</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Sexuality, Desire, and Family</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1825-1930</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining the Dramatic Monologue</a></li>
 					</ul>
 				</section>
 
@@ -71,10 +71,10 @@
 					<!-- <div><a href="/html/lesson_plans/seacole.html"><img loading="lazy" src="" srcset="" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Introduction</span></a></div> -->
 					<ul>
 						<li><a href="">Introduction</a></li>
-						<li><a href="">Decentering Britishness</a></li>
-						<li><a href="">Autobiographical Writing</a></li>
-						<li><a href="">Recentering Nursing in Wartime</a></li>
-						<li><a href="">Decolonizing Health(care)</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Autobiographical Writing</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Recentering Nursing in Wartime</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decolonizing Health(care)</a></li>
 					</ul>
 				</section>
 
