--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -81,7 +81,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>(MLA):</strong> “Zoomcast with Tricia Lootens.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/lootens.html">https://undiscipliningvc.org/html/zoomcasts/lootens.html</a>.</p>
+						<p>“Zoomcast with Tricia Lootens.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/lootens.html">https://undiscipliningvc.org/html/zoomcasts/lootens.html</a>.</p>
 					</section>
 			</main>
 			
