--- a/html/about.html
+++ b/html/about.html
@@ -43,7 +43,7 @@
 			<main id="main">
 
 				<section aria-labelledby="level-2-title">
-					<h2 id="level-2-title"><i class="fa fa-book fa-fw" aria-hidden="true"></i> About</h2>
+					<h2 id="level-2-title"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> About</h2>
 				</section>
 
 				<section aria-labelledby="overview">
