--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
 		<link rel="preload" as="style" href="/css/cluster.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
-		<link rel="preconnect" href="https://fonts.gstatic.com"> 
+		<link rel="preconnect" href="https://fonts.gstatic.com"/> 
 		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
@@ -62,7 +62,7 @@
 				</section>
 
 				<section aria-labelledby="faq">
-					<h2 id="faq">Frequently Asked Questions</h2>
+					<h2 id="faq">Values and Practices</h2>
 					<div><a href="/html/about/faq.html"><img loading="" src="/img/about/tiles/uvc_0024-1324px.jpg" srcset="/img/about/tiles/uvc_0024-1324px.jpg 1324w, /img/about/tiles/uvc_0024-1136px.jpg 1136w, /img/about/tiles/uvc_0024-930px.jpg 930w, /img/about/tiles/uvc_0024-814px.jpg 814w, /img/about/tiles/uvc_0024-662px.jpg 662w, /img/about/tiles/uvc_0024-568px.jpg 568w, /img/about/tiles/uvc_0024-530px.jpg 530w, /img/about/tiles/uvc_0024-465px.jpg 465w, /img/about/tiles/uvc_0024-407px.jpg 407w, /img/about/tiles/uvc_0024-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Complex flower array with red, pink, white, yellow, blue, and purple flowers." title="Jones, Owen. “Indian No. 6.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LIV, https://archive.org/details/grammarornament00Jone. Public Domain."/></a></div>
 				</section>
 
